--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
     <ul>
         <li><a href="#">Inicio</a></li>
-        <li><a href="./pages/camisas.html">Camisas</a></li>
-        <li><a href="./pages/pantalones.html">Pantalones</a></li>
-        <li><a href="./pages/zapatos.html">Zapatos</a></li>
-        <li><a href="./pages/iniciarsesion.html">Iniciar Sesion</a></li>
+        <li><a href="#">Camisas</a></li>
+        <li><a href="#">Pantalones</a></li>
+        <li><a href="#">Zapatos</a></li>
+        <li><a href="#">Iniciar Sesion</a></li>
     </ul>
-    <div class="miJumbo">
-        <h1>Holaaaaa!</h1>
+    <div class="#">
+        <h1>Tienda!</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro dolorem, eos consequatur officiis nisi excepturi esse iusto assumenda, perspiciatis dolor consectetur, cumque sit vero maiores iste iure aspernatur accusantium dolores.</p>
     </div>
 </body>
 </html>
