--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="#">Zapatos</a></li>
         <li><a href="#">Iniciar Sesion</a></li>
     </ul>
-    <div class="#">
+    <div class="mititulo">
         <h1>Tienda!</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro dolorem, eos consequatur officiis nisi excepturi esse iusto assumenda, perspiciatis dolor consectetur, cumque sit vero maiores iste iure aspernatur accusantium dolores.</p>
     </div>
