--- a/Pages/camisas.html
+++ b/Pages/camisas.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camisas</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <ul>
         <li><a href="/index.html">Inicio</a></li>
-        <li><a href="#">Camisas</a></li>
+        <li><a class="activo" href="#">Camisas</a></li>
         <li><a href="./pantalones.html">Pantalones</a></li>
         <li><a href="./zapatos.html">Zapatos</a></li>
-        <li><a href="./iniciarsesion.html">Iniciar Sesion</a></li>
+        <li class="derecha"><a href="./usuariosregistrados.html">Usuarios Registrados</a></li>
     </ul>
     <div class="miJumbo">
-        <h1>Camisas...</h1>
+        <h1>Camisas</h1>
     </div>
 </body>
 </html>
