--- a/Pages/usuariosregistrados.html
+++ b/Pages/usuariosregistrados.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuario Registrados</title>
+    <title>Usuarios Registrados</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <ul>
@@ -14,7 +15,7 @@
         <li class="derecha"><a class="activo" href="#">Usuarios Registrados</a></li>
     </ul>
     <div class="miJumbo">
-        <h1>Usuarios Registrados...</h1>
+        <h1>Usuarios Registrados</h1>
     </div>
 </body>
 </html>
