--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a class="activo" href="#">Inicio</a></li>
         <li><a href="./pages/camisas.html">Camisas</a></li>
         <li><a href="./pages/pantalones.html">Pantalones</a></li>
         <li><a href="./pages/zapatos.html">Zapatos</a></li>
-        <li><a href="./pages/iniciarsesion.html">Iniciar Sesion</a></li>
+        <li class="derecha"><a href="./pages/usuariosregistrados.html">Usuarios Registrados</a></li>
     </ul>
     <div class="miJumbo">
-        <h1>Holaaaaa!</h1>
+        <h1>Bienvenido</h1>
     </div>
 </body>
 </html>
