--- a/Pages/usuariosregistrados.html
+++ b/Pages/usuariosregistrados.html
@@ -14,8 +14,8 @@
         <li><a href="./pages/zapatos.html">Zapatos</a></li>
         <li class="derecha"><a href="./pages/usuariosregistrados.html">Usuarios Registrados</a></li>
     </ul>
-    <div class="mititulo">
-        <h1>Tienda</h1>
+    <div class="miJumbo">
+        <h1>Bienvenido</h1>
     </div>
 </body>
 </html>
