--- a/Pages/zapatos.html
+++ b/Pages/zapatos.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zapatos</title>
+    <title>Usuarios Registrados</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <ul>
         <li><a href="/index.html">Inicio</a></li>
         <li><a href="./camisas.html">Camisas</a></li>
         <li><a href="./pantalones.html">Pantalones</a></li>
-        <li><a href="#">Zapatos</a></li>
-        <li><a href="./iniciarsesion.html">Iniciar Sesion</a></li>
+        <li><a href="./zapatos.html">Zapatos</a></li>
+        <li class="derecha"><a class="activo" href="#">Usuarios Registrados</a></li>
     </ul>
     <div class="miJumbo">
-        <h1>Zapatos...</h1>
+        <h1>Usuarios Registrados</h1>
     </div>
 </body>
 </html>
