--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Camisas</a></li>
-        <li><a href="#">Pantalones</a></li>
-        <li><a href="#">Zapatos</a></li>
-        <li><a href="#">Iniciar Sesion</a></li>
-    </ul>
+    <nav class="nav">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Camisas</a></li>
+            <li><a href="#">Pantalones</a></li>
+            <li><a href="#">Zapatos</a></li>
+            <li><a href="#">Iniciar Sesion</a></li>
+        </ul>
+    </nav>
     <div class="mititulo">
         <h1>Tienda!</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro dolorem, eos consequatur officiis nisi excepturi esse iusto assumenda, perspiciatis dolor consectetur, cumque sit vero maiores iste iure aspernatur accusantium dolores.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro dolorem, 
+            eos consequatur officiis nisi excepturi esse iusto assumenda, perspiciatis
+            dolor consectetur, cumque sit vero maiores iste iure aspernatur accusantium 
+            dolores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus
+            tenetur harum blanditiis reprehenderit corporis rem culpa, voluptatum laboriosam 
+            perspiciatis ipsa suscipit? Earum animi nobis modi. Repellat quisquam nulla animi accusamus?</p>
     </div>
 </body>
 </html>
