--- a/Pages/pantalones.html
+++ b/Pages/pantalones.html
@@ -14,8 +14,14 @@
         <li><a href="./zapatos.html">Zapatos</a></li>
         <li class="derecha"><a href="./usuariosregistrados.html">Usuarios Registrados</a></li>
     </ul>
-    <div class="miJumbo">
+    <div class="mititulo">
         <h1>Pantalones</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro dolorem, 
+            eos consequatur officiis nisi excepturi esse iusto assumenda, perspiciatis
+            dolor consectetur, cumque sit vero maiores iste iure aspernatur accusantium 
+            dolores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus
+            tenetur harum blanditiis reprehenderit corporis rem culpa, voluptatum laboriosam 
+            perspiciatis ipsa suscipit? Earum animi nobis modi. Repellat quisquam nulla animi accusamus?</p>
     </div>
 </body>
 </html>
