--- a/Pages/usuariosregistrados.html
+++ b/Pages/usuariosregistrados.html
@@ -14,8 +14,9 @@
         <li><a href="./zapatos.html">Zapatos</a></li>
         <li class="derecha"><a class="activo" href="#">Usuarios Registrados</a></li>
     </ul>
-    <div class="miJumbo">
+    <div class="mititulo">
         <h1>Usuarios Registrados</h1>
+        <p>Luis, Julian, Juan, Jaider, Fernando.</p>
     </div>
 </body>
 </html>
