--- a/Pages/pantalones.html
+++ b/Pages/pantalones.html
@@ -9,13 +9,14 @@
 <body>
     <ul>
         <li><a href="/index.html">Inicio</a></li>
-        <li><a class="activo" href="#">Camisas</a></li>
-        <li><a href="./pantalones.html">Pantalones</a></li>
+        <li><a href="./camisas.html">Camisas</a></li>
+        <li><a class="activo" href="#">Pantalones</a></li>
         <li><a href="./zapatos.html">Zapatos</a></li>
         <li class="derecha"><a href="./usuariosregistrados.html">Usuarios Registrados</a></li>
     </ul>
-    <div class="miJumbo">
-        <h1>Camisas</h1>
+    <div class="mititulo">
+        <h1>Pantalones</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur minus accusantium laboriosam natus, dolore, enim vitae optio, numquam harum iste cum quis saepe error velit? Officia tempore dolores vel omnis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, mollitia molestiae quidem necessitatibus, omnis possimus doloremque nesciunt soluta ut exercitationem, cupiditate ex consequatur iusto accusantium ullam repudiandae vero nihil illum?</p>
     </div>
 </body>
 </html>
